[gd_scene format=3 uid="uid://dbkrdivn3awpo"]

[ext_resource type="Texture2D" uid="uid://wbtekiv0ou44" path="res://asset/ui/skills/Button3.png" id="1_0flvj"]
[ext_resource type="Texture2D" uid="uid://cjkthb4wu0xu6" path="res://asset/ui/overlay_cells.png" id="1_r2kef"]
[ext_resource type="Script" uid="uid://5bs63o3jy6s4" path="res://UI/skilll_button.gd" id="2_r2kef"]

[node name="Skill_Button" type="TextureButton" unique_id=748911115]
custom_minimum_size = Vector2(64, 64)
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("1_r2kef")
texture_pressed = ExtResource("1_0flvj")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("2_r2kef")

[node name="Label_spell" type="Label" parent="." unique_id=275755034]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -56.0
offset_right = 21.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 2
text = "sort 1"

[node name="label_key" type="Label" parent="." unique_id=1052387797]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -32.0
offset_right = 34.0
offset_bottom = -7.0
grow_vertical = 0
text = "1"
vertical_alignment = 2

[connection signal="pressed" from="." to="." method="_on_pressed"]
